--- a/src/main/webapp/magazin.xhtml
+++ b/src/main/webapp/magazin.xhtml
@@ -5,11 +5,55 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:p="http://primefaces.org/ui"
         template="/template.xhtml">
-    <ui:define name="content" >
-        <h:form>
-            <h:outputText value="#{magazineBean.description}"/>
-            <h:outputText value="#{magazineBean.title}"/>
-        </h:form>
+    <ui:define name="content">
+        <div class="card">
+            <h:form id="form">
+                <p:growl id="messages" showDetail="true"/>
+
+                <p:toolbar>
+                    <f:facet name="left">
+                        <p:commandButton type="button" id="add-magazine-button" value="Neu" icon="pi pi-plus"
+                                         actionListener="#{magazineBean.addMagazine()}"
+                                         styleClass="ui-button-success" style="margin-right: .5rem"
+                                         update="allMagazineList"/>
+
+                        <p:commandButton type="button" id="delete-magazine-button" value="Löschen" icon="pi pi-trash"
+                                         actionListener="#{magazineBean.deleteMagazines()}"
+                                         styleClass="ui-button-danger" update="@this"/>
+                    </f:facet>
+                </p:toolbar>
+
+
+                <p:dataTable id="allMagazineList" var="magazine" value="#{magazineBean.allMagazines}"
+                             selection="#{magazineBean.selectedMagazines}"
+                             rowKey="#{magazineBean.id}" paginator="true" rows="15" rowSelectMode="add"
+                             paginatorPosition="bottom">
+
+                    <p:ajax event="rowSelect" update=":form:delete-magazine-button"/>
+                    <p:ajax event="rowUnselect" update=":form:delete-magazine-button"/>
+                    <p:ajax event="rowSelectCheckbox" update=":form:delete-magazine-button"/>
+                    <p:ajax event="rowUnselectCheckbox" update=":form:delete-magazine-button"/>
+                    <p:ajax event="toggleSelect" update=":form:delete-magazine-button"/>
+
+                    <p:column selectionMode="multiple" exportable="false"/>
+
+                    <p:column headerText="ID">
+                        <h:outputText value="#{magazine.id}"/>
+                    </p:column>
+
+                    <p:column headerText="Name">
+                        <h:outputText value="#{magazine.title}"/>
+                    </p:column>
+
+                    <p:column headerText="Beschreibung">
+                        <h:outputText value="#{magazine.description}"/>
+                    </p:column>
+
+                </p:dataTable>
+
+            </h:form>
+        </div>
     </ui:define>
 </ui:composition>
