--- a/src/main/webapp/magazin.xhtml
+++ b/src/main/webapp/magazin.xhtml
@@ -33,8 +33,10 @@
 
                 <p:dataTable id="allMagazineList" var="magazine" value="#{magazineBean.allMagazines}"
                              selection="#{magazineBean.selectedMagazines}"  styleClass="products-table" reflow="true"
-                             rowKey="#{magazine.id}" paginator="true" rows="15" rowSelectMode="add"
-                             paginatorPosition="bottom">
+                             rowKey="#{magazine.id}" paginator="true" rows="10" rowSelectMode="add"
+                             paginatorPosition="bottom" rowsPerPageTemplate="5,10,20,{ShowAll|'Alle'}"
+                             paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             currentPageReportTemplate="{startRecord}-{endRecord} von {totalRecords} Magazine">
 
                     <p:ajax event="rowSelect" update=":form:delete-magazine-button"/>
                     <p:ajax event="rowUnselect" update=":form:delete-magazine-button"/>
