--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-    <title>.:: JoinFaces Example ::.</title>
+    <title>.:: CMT ::.</title>
     <h:outputStylesheet library="css" name="style.css" />
 </h:head>
 
