--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -15,7 +15,7 @@
     <div id="mainDiv" class="ui-fluid center">
         <p:menubar>
             <p:menuitem value="Startseite" url="homepage.xhtml" />
-            <p:menuitem value="Magazine" url="magazin.xhtml" />
+            <p:menuitem value="Magazine" url="magazineList.xhtml" />
             <p:menuitem value="Anbieter" url="verlage.xhtml" />
         </p:menubar>
 
