--- a/src/main/webapp/magazine.xhtml
+++ b/src/main/webapp/magazine.xhtml
@@ -5,6 +5,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:p="http://primefaces.org/ui"
         template="/template.xhtml">
 
     <f:metadata>
@@ -12,11 +13,23 @@
         <f:event type="preRenderView" listener="#{magazineBean.init}" />
     </f:metadata>
     <ui:define name="content" >
-        <f:view>
-            <h:outputLabel value="#{magazineBean.id}"/>
-            <h:outputLabel value="#{magazineBean.title}"/>
-            <h:outputLabel value="#{magazineBean.describtion}"/>
-        </f:view>
+        <h:form id="form">
+            <p:panelGrid columns="2" columnClasses="labelColumn, inputColumn">
+                <h:outputLabel value="Label:" for="id" />
+                <p:inputText id="id" value="#{magazineBean.id}" readonly="true" style="width: 500px" />
+
+                <h:outputLabel value="Titel:" for="title" />
+                <p:inputText id="title" value="#{magazineBean.title}" style="width: 500px"/>
+
+                <h:outputLabel value="Kurze Beschreibeung:" for="description" />
+                <p:inputText id="description" value="#{magazineBean.description}" style="width: 500px"/>
+            </p:panelGrid>
+
+            <p:commandButton value="Save" actionListener="#{magazineBean.save}" ajax="true"/>
+
+
+
+        </h:form>
     </ui:define>
 </ui:composition>
 
