Add new Fields to Publisher and implemented create and update

--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -16,7 +16,7 @@
         <p:menubar>
             <p:menuitem value="Startseite" url="homepage.xhtml" />
             <p:menuitem value="Magazine" url="magazineList.xhtml" />
-            <p:menuitem value="Anbieter" url="publisher.xhtml" />
+            <p:menuitem value="Verlag" url="publisher.xhtml" />
         </p:menubar>
 
         <p:spacer height="10" />
