--- a/src/main/webapp/publisher.xhtml
+++ b/src/main/webapp/publisher.xhtml
@@ -15,9 +15,9 @@
                 <p:toolbar>
                     <p:toolbarGroup>
                         <p:commandButton id="add-publisher-button" value="Neu" icon="pi pi-plus"
-                                         actionListener="#{publisherListBean.addPublisher()}"
+                                         actionListener="#{publisherListBean.openNew()}"
                                          styleClass="ui-button-success" style="margin-right: .5rem; width: 180px"
-                                         update="allPublisherList"/>
+                                         oncomplete="PF('managePublisher').show()"/>
 
                         <p:commandButton id="delete-publisher-button" value="#{publisherListBean.deleteButtonMessage}"
                                          icon="pi pi-trash"
@@ -32,11 +32,12 @@
 
 
                 <p:dataTable id="allPublisherList" var="publisher" value="#{publisherListBean.allPublishers}"
-                             selection="#{publisherListBean.selectedPublishers}" styleClass="products-table" reflow="true"
+                             selection="#{publisherListBean.selectedPublishers}" styleClass="products-table"
                              rowKey="#{publisher.id}" paginator="true" rows="10" rowSelectMode="add"
                              paginatorPosition="bottom" rowsPerPageTemplate="5,10,20,{ShowAll|'Alle'}"
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                             currentPageReportTemplate="{startRecord}-{endRecord} von {totalRecords} Verlagen">
+                             currentPageReportTemplate="{startRecord}-{endRecord} von {totalRecords} Verlagen"
+                             editable="true">
 
                     <p:ajax event="rowSelect" update=":form:delete-publisher-button"/>
                     <p:ajax event="rowUnselect" update=":form:delete-publisher-button"/>
@@ -54,23 +55,108 @@
                         <h:outputText value="#{publisher.name}"/>
                     </p:column>
 
+                    <p:column headerText="Straße" sortBy="#{publisher.street}" filterBy="#{publisher.street}">
+                        <h:outputText value="#{publisher.street}"/>
+                    </p:column>
+
+                    <p:column headerText="Straßennr." sortBy="#{publisher.streetnumber}"
+                              filterBy="#{publisher.streetnumber}">
+                        <h:outputText value="#{publisher.streetnumber}"/>
+                    </p:column>
+
+                    <p:column headerText="Postleitzahl" sortBy="#{publisher.zip}" filterBy="#{publisher.zip}">
+                        <h:outputText value="#{publisher.zip}"/>
+                    </p:column>
+
+                    <p:column headerText="Land" sortBy="#{publisher.country}" filterBy="#{publisher.country}">
+                        <h:outputText value="#{publisher.country}"/>
+                    </p:column>
+
+                    <p:column headerText="Deactiviert" sortBy="#{publisher.deactivated}"
+                              filterBy="#{publisher.deactivated}">
+                        <p:selectBooleanCheckbox value="#{publisher.deactivated}" disabled="true"/>
+                    </p:column>
+
+                    <p:column exportable="false" style="width: 30px !important;">
+                        <p:commandButton icon="pi pi-pencil"
+                                         process="@this"
+                                         update=":dialogs:manage-publisher-content"
+                                         style="float: right" oncomplete="PF('managePublisher').show()">
+                            <f:setPropertyActionListener value="#{publisher}"
+                                                         target="#{publisherListBean.currentPublisher}"/>
+                        </p:commandButton>
+                    </p:column>
+
+
                     <p:column exportable="false" style="width: 30px !important;">
                         <p:commandButton class="ui-button-danger rounded-button" icon="pi pi-trash"
-                                         process="@this" actionListener="#{publisherListBean.deletePublisher(publisher)}"
+                                         process="@this"
+                                         actionListener="#{publisherListBean.deletePublisher(publisher)}"
                                          style="float: right">
                             <p:confirm header="Bestätigung" message="Sicher das Sie diese Verlag löschen wollen?"
                                        icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
                     </p:column>
 
-                </p:dataTable>
 
+                </p:dataTable>
                 <p:confirmDialog global="true" showEffect="fade" width="300">
                     <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="pi pi-check"/>
                     <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no ui-button-secondary"
                                      icon="pi pi-times"/>
                 </p:confirmDialog>
 
+
+            </h:form>
+
+            <h:form id="dialogs">
+                <p:dialog header=" Verlag Details" showEffect="fade" modal="true" widgetVar="managePublisher"
+                          responsive="true">
+                    <p:outputPanel id="manage-publisher-content" class="ui-fluid">
+
+                        <p:panelGrid id="grid" columns="2" columnClasses="labelColumn, inputColumn">
+                            <p:outputLabel for="name" value="Name:"/>
+                            <p:inputText id="name" value="#{publisherListBean.currentPublisher.name}"/>
+
+
+                            <p:outputLabel for="country" value="Land:"/>
+                            <p:selectOneMenu id="country" value="#{publisherListBean.currentPublisher.country}">
+                                <f:selectItem itemLabel="Wähle Land aus" itemValue="#{null}"/>
+                                <f:selectItem itemLabel="Deutschland" itemValue="Deutschland"/>
+                                <f:selectItem itemLabel="Österreich" itemValue="Österreich"/>
+                                <f:selectItem itemLabel="Schweiz" itemValue="Schweiz"/>
+                                <p:ajax process="dialogs:manage-publisher-content" update="dialogs:manage-publisher-content"/>
+                            </p:selectOneMenu>
+
+                            <p:outputLabel for="street" value="Straße:"/>
+                            <p:inputText id="street" value="#{publisherListBean.currentPublisher.street}"/>
+
+
+                            <p:outputLabel for="streetnumber" value="Straßennr.:"/>
+                            <p:inputNumber id="streetnumber" value="#{publisherListBean.currentPublisher.streetnumber}"
+                                           minValue="0" maxValue="99999" decimalPlaces="0" thousandSeparator=""/>
+
+
+                            <p:outputLabel for="zip" value="Postleitzahl:"
+                                               rendered="#{publisherListBean.currentPublisher.country eq 'Deutschland'}"/>
+                            <p:inputNumber id="zip" value="#{publisherListBean.currentPublisher.zip}" minValue="0"
+                                               maxValue="99999" decimalPlaces="0" thousandSeparator=""
+                                               rendered="#{publisherListBean.currentPublisher.country eq 'Deutschland'}"/>
+
+
+                            <p:outputLabel for="deactivated" value="Deaktiviert"/>
+                            <p:selectBooleanCheckbox id="deactivated"
+                                                     value="#{publisherListBean.currentPublisher.deactivated}"/>
+                        </p:panelGrid>
+                    </p:outputPanel>
+
+                    <f:facet name="footer">
+                        <p:commandButton value="Save" icon="pi pi-check" actionListener="#{publisherListBean.save()}"
+                                         onclick="PF('managePublisher').hide()" update="form"/>
+                        <p:commandButton value="Cancel" icon="pi pi-times" onclick="PF('managePublisher').hide()"
+                                         class="ui-button-secondary" type="button"/>
+                    </f:facet>
+                </p:dialog>
             </h:form>
         </div>
     </ui:define>
