--- a/src/main/webapp/homepage.xhtml
+++ b/src/main/webapp/homepage.xhtml
@@ -7,10 +7,17 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:p="http://primefaces.org/ui"
         template="/template.xhtml">
     <ui:define name="content" >
         <h:form>
-           <h:outputText value="hallo Homepage"/>
+            <p:panelGrid columns="2" columnClasses="labelColumn, inputColumn" >
+                <h:outputLabel value="Partial Submit " for="partial"/>
+                <p:selectBooleanCheckbox id="partial" value="#{settingsBean.partial}" />
+
+                <p:commandButton value="Speichern" action="#{settingsBean.save()}" style="width: 200px"/>
+                <h:panelGroup/>
+            </p:panelGrid>
         </h:form>
     </ui:define>
 </ui:composition>
