--- a/src/main/webapp/magazine.xhtml
+++ b/src/main/webapp/magazine.xhtml
@@ -6,7 +6,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:p="http://primefaces.org/ui"
-        template="/template.xhtml">
+        template="/#{settingsBean.selectedMenu}.xhtml">
 
     <f:metadata>
         <f:viewParam name="magazineId" value="#{magazineBean.id}"/>
