--- a/src/main/webapp/templateTabMenu.xhtml
+++ b/src/main/webapp/templateTabMenu.xhtml
@@ -4,7 +4,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:p="http://primefaces.org/ui">
+
+<!-- Template for the tab menu. -->
+
+<!-- If the template should look all the time the same and only the menu type changes, it would be better to use a rendered condition and just use one template. -->
+
+<!-- With this version we could do individuall solutions for every kind of menu. -->
+
 
 <h:head>
     <title>.:: CMT ::.</title>
@@ -14,12 +22,17 @@
 <h:body style="background-color: #1f2d40;">
     <div id="mainDiv" class="ui-fluid center">
         <p:tabMenu>
-            <p:menuitem value="Startseite" url="homepage.xhtml" />
-            <p:menuitem value="Magazine" url="magazineList.xhtml" />
-            <p:menuitem value="Verlag" url="publisher.xhtml" />
+
+            <!-- Using the jstl core to iterate over a list to generate the single menu points-->
+
+            <c:forEach var="item" items="#{menuBean.menuItems}">
+                <p:menuitem value="#{item.value}" url="#{item.url}" />
+            </c:forEach>
         </p:tabMenu>
 
         <p:spacer height="10" />
+
+        <!-- Marker for the content -->
 
         <ui:insert name="content" />
     </div>
